docs/api/qiskit/0.19/qiskit.aqua.algorithms.MaximumLikelihoodAmplitudeEstimation.mdx
---
title: MaximumLikelihoodAmplitudeEstimation (v0.19)
description: API reference for qiskit.aqua.algorithms.MaximumLikelihoodAmplitudeEstimation in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.algorithms.MaximumLikelihoodAmplitudeEstimation
---

# MaximumLikelihoodAmplitudeEstimation

<Class id="qiskit.aqua.algorithms.MaximumLikelihoodAmplitudeEstimation" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/algorithms/amplitude_estimators/mlae.py" signature="MaximumLikelihoodAmplitudeEstimation(num_oracle_circuits, a_factory=None, q_factory=None, i_objective=None, likelihood_evals=None, quantum_instance=None)" modifiers="class">
  The Maximum Likelihood Amplitude Estimation algorithm.

  This class implements the an quantum amplitude estimation (QAE) algorithm without phase estimation, according to [https://arxiv.org/abs/1904.10246](https://arxiv.org/abs/1904.10246). In comparison to the original QAE algorithm ([https://arxiv.org/abs/quant-ph/0005055](https://arxiv.org/abs/quant-ph/0005055)), this implementation relies solely on different powers of the Grover algorithm and does not require ancilla qubits. Finally, the estimate is determined via a maximum likelihood estimation, which is why this class in named MaximumLikelihoodAmplitudeEstimation.

  **Parameters**

  *   **num\_oracle\_circuits** (`int`) – The number of circuits applying different powers of the Grover oracle Q. The (num\_oracle\_circuits + 1) executed circuits will be \[id, Q^2^0, …, Q^2^\{num\_oracle\_circuits-1}] A |0>, where A is the problem unitary encoded in the argument a\_factory. Has a minimum value of 1.
  *   **a\_factory** (`Optional`\[[`CircuitFactory`](qiskit.aqua.utils.CircuitFactory "qiskit.aqua.utils.circuit_factory.CircuitFactory")]) – The CircuitFactory subclass object representing the problem unitary.
  *   **q\_factory** (`Optional`\[[`CircuitFactory`](qiskit.aqua.utils.CircuitFactory "qiskit.aqua.utils.circuit_factory.CircuitFactory")]) – The CircuitFactory subclass object representing. an amplitude estimation sample (based on a\_factory)
  *   **i\_objective** (`Optional`\[`int`]) – The index of the objective qubit, i.e. the qubit marking ‘good’ solutions with the state |1> and ‘bad’ solutions with the state |0>
  *   **likelihood\_evals** (`Optional`\[`int`]) – The number of gridpoints for the maximum search of the likelihood function
  *   **quantum\_instance** (`Union`\[[`QuantumInstance`](qiskit.aqua.QuantumInstance "qiskit.aqua.quantum_instance.QuantumInstance"), [`BaseBackend`](qiskit.providers.BaseBackend "qiskit.providers.basebackend.BaseBackend"), `None`]) – Quantum Instance or Backend

  ## Attributes

  <span id="maximumlikelihoodamplitudeestimation-a-factory" />

  ### a\_factory

  <Attribute id="qiskit.aqua.algorithms.MaximumLikelihoodAmplitudeEstimation.a_factory">
    Get the A operator encoding the amplitude a that’s approximated, i.e.

    > A |0>\_n |0> = sqrt\{1 - a} |psi\_0>\_n |0> + sqrt\{a} |psi\_1>\_n |1>

    see the original Brassard paper ([https://arxiv.org/abs/quant-ph/0005055](https://arxiv.org/abs/quant-ph/0005055)) for more detail.

    **Returns**

    the A operator as CircuitFactory

    **Return type**

    [CircuitFactory](qiskit.aqua.utils.CircuitFactory "qiskit.aqua.utils.CircuitFactory")
  </Attribute>

  <span id="maximumlikelihoodamplitudeestimation-backend" />

  ### backend

  <Attribute id="qiskit.aqua.algorithms.MaximumLikelihoodAmplitudeEstimation.backend" attributeTypeHint="qiskit.providers.basebackend.BaseBackend">
    Returns backend.

    **Return type**

    [`BaseBackend`](qiskit.providers.BaseBackend "qiskit.providers.basebackend.BaseBackend")
  </Attribute>

  <span id="maximumlikelihoodamplitudeestimation-i-objective" />

  ### i\_objective

  <Attribute id="qiskit.aqua.algorithms.MaximumLikelihoodAmplitudeEstimation.i_objective">
    Get the index of the objective qubit. The objective qubit marks the |psi\_0> state (called ‘bad states’ in [https://arxiv.org/abs/quant-ph/0005055](https://arxiv.org/abs/quant-ph/0005055)) with |0> and |psi\_1> (‘good’ states) with |1>. If the A operator performs the mapping

    > A |0>\_n |0> = sqrt\{1 - a} |psi\_0>\_n |0> + sqrt\{a} |psi\_1>\_n |1>

    then, the objective qubit is the last one (which is either |0> or |1>).

    If the objective qubit (i\_objective) is not set, we check if the Q operator (q\_factory) is set and return the index specified there. If the q\_factory is not defined, the index equals the number of qubits of the A operator (a\_factory) minus one. If also the a\_factory is not set, return None.

    **Returns**

    the index of the objective qubit

    **Return type**

    int
  </Attribute>

  <span id="maximumlikelihoodamplitudeestimation-q-factory" />

  ### q\_factory

  <Attribute id="qiskit.aqua.algorithms.MaximumLikelihoodAmplitudeEstimation.q_factory">
    Get the Q operator, or Grover-operator for the Amplitude Estimation algorithm, i.e.

    > Q = -A S\_0 A^\{-1} S\_psi0,

    where S\_0 reflects about the |0>\_n state and S\_psi0 reflects about |psi\_0>\_n. See [https://arxiv.org/abs/quant-ph/0005055](https://arxiv.org/abs/quant-ph/0005055) for more detail.

    If the Q operator is not set, we try to build it from the A operator. If neither the A operator is set, None is returned.

    **Returns**

    returns the current Q factory of the algorithm

    **Return type**

    QFactory
  </Attribute>

  <span id="maximumlikelihoodamplitudeestimation-quantum-instance" />

  ### quantum\_instance

  <Attribute id="qiskit.aqua.algorithms.MaximumLikelihoodAmplitudeEstimation.quantum_instance" attributeTypeHint="Union[None, qiskit.aqua.quantum_instance.QuantumInstance]">
    Returns quantum instance.

    **Return type**

    `Optional`\[[`QuantumInstance`](qiskit.aqua.QuantumInstance "qiskit.aqua.quantum_instance.QuantumInstance")]
  </Attribute>

  <span id="maximumlikelihoodamplitudeestimation-random" />

  ### random

  <Attribute id="qiskit.aqua.algorithms.MaximumLikelihoodAmplitudeEstimation.random">
    Return a numpy random.
  </Attribute>

  ## Methods

  <span id="maximumlikelihoodamplitudeestimation-confidence-interval" />

  ### confidence\_interval

  <Function id="qiskit.aqua.algorithms.MaximumLikelihoodAmplitudeEstimation.confidence_interval" signature="MaximumLikelihoodAmplitudeEstimation.confidence_interval(alpha, kind='fisher')">
    Compute the alpha confidence interval using the method kind.

    The confidence level is (1 - alpha) and supported kinds are ‘fisher’, ‘likelihood\_ratio’ and ‘observed\_fisher’ with shorthand notations ‘fi’, ‘lr’ and ‘oi’, respectively.

    **Parameters**

    *   **alpha** (`float`) – The confidence level.
    *   **kind** (`str`) – The method to compute the confidence interval. Defaults to ‘fisher’, which computes the theoretical Fisher information.

    **Return type**

    `List`\[`float`]

    **Returns**

    The specified confidence interval.

    **Raises**

    *   [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – If run() hasn’t been called yet.
    *   **NotImplementedError** – If the method kind is not supported.
  </Function>

  <span id="maximumlikelihoodamplitudeestimation-construct-circuits" />

  ### construct\_circuits

  <Function id="qiskit.aqua.algorithms.MaximumLikelihoodAmplitudeEstimation.construct_circuits" signature="MaximumLikelihoodAmplitudeEstimation.construct_circuits(measurement=False)">
    Construct the Amplitude Estimation w/o QPE quantum circuits.

    **Parameters**

    **measurement** (`bool`) – Boolean flag to indicate if measurement should be included in the circuits.

    **Return type**

    `List`\[[`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")]

    **Returns**

    A list with the QuantumCircuit objects for the algorithm.
  </Function>

  <span id="maximumlikelihoodamplitudeestimation-run" />

  ### run

  <Function id="qiskit.aqua.algorithms.MaximumLikelihoodAmplitudeEstimation.run" signature="MaximumLikelihoodAmplitudeEstimation.run(quantum_instance=None, **kwargs)">
    Execute the algorithm with selected backend.

    **Parameters**

    *   **quantum\_instance** (`Union`\[[`QuantumInstance`](qiskit.aqua.QuantumInstance "qiskit.aqua.quantum_instance.QuantumInstance"), [`BaseBackend`](qiskit.providers.BaseBackend "qiskit.providers.basebackend.BaseBackend"), `None`]) – the experimental setting.
    *   **kwargs** (*dict*) – kwargs

    **Returns**

    results of an algorithm.

    **Return type**

    dict

    **Raises**

    [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – If a quantum instance or backend has not been provided
  </Function>

  <span id="maximumlikelihoodamplitudeestimation-set-backend" />

  ### set\_backend

  <Function id="qiskit.aqua.algorithms.MaximumLikelihoodAmplitudeEstimation.set_backend" signature="MaximumLikelihoodAmplitudeEstimation.set_backend(backend, **kwargs)">
    Sets backend with configuration.

    **Return type**

    `None`
  </Function>
</Class>

